[tool.poetry]
name = "taskapi"
version = "0.1.0"
description = "TDD with fastapi"
authors = ["Vitor Silva <vitor.azevedo009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode= "false"
